...
        greetingLabel.translatesAutoresizingMaskIntoConstraints = false
        greetingLabel.topAnchor.constraint(equalTo: userMailLabel.bottomAnchor, constant: 8).isActive = true
        greetingLabel.leadingAnchor.constraint(equalTo: profileAvatar.leadingAnchor).isActive = true
    }
    
    private func addExitButton() {
        let exitButton = UIButton(type: .system)
        exitButton.setImage(UIImage(systemName: "ipad.and.arrow.forward"), for: .normal)
        exitButton.tintColor = UIColor(named: "YP Red")
        exitButton.addTarget(self,
                             action: #selector(buttonTapped),
                             for: .touchUpInside)
        
...
        let name = profileStorage.firstName + " " + profileStorage.lastName
        let alert = UIAlertController(
            title: "Exit from account \(name)",
            message: "Do you want to exit?",
            preferredStyle: .alert)
        
        let yesButton = UIAlertAction(title: "Yes",
                                      style: .default) { _ in
            self.presenter?.logout() 
            self.switchAuthViewController()
        }
//        yesButton.accessibilityIdentifier = "Yes"
        
...
