//
//  EndlessImageFeedUITests.swift
//  EndlessImageFeedUITests
//
//  Created by Александра Коснырева on 24.06.2024.
//

import XCTest

final class Image_FeedUITests: XCTestCase {
    private let app = XCUIApplication() // переменная приложения
    
    override func setUpWithError() throws {
        continueAfterFailure = false // настройка выполнения тестов, которая прекратит выполнения тестов, если в тесте что-то пошло не так
        
        app.launch() // запускаем приложение перед каждым тестом
    }
    
    func testAuth() throws {
       app.buttons["Authenticate"].tap()
        
        let webView = app.webViews["UnsplashWebView"]
        
        XCTAssertTrue(webView.waitForExistence(timeout: 5))
        
        let loginTextField = webView.descendants(matching: .textField).element
        XCTAssertTrue(loginTextField.waitForExistence(timeout: 10))
        
        loginTextField.tap()
        loginTextField.typeText(" ")
        XCUIApplication().toolbars.buttons["Done"].tap()
        
        let passwordTextField = webView.descendants(matching: .secureTextField).element
        XCTAssertTrue(passwordTextField.waitForExistence(timeout: 5))
        
        passwordTextField.tap()
        passwordTextField.typeText(" ")
        XCUIApplication().toolbars.buttons["Done"].tap()
        
        webView.buttons["Login"].tap()
        
        let tablesQuery = app.tables
        let cell = tablesQuery.children(matching: .cell).element(boundBy: 0)
        
        XCTAssertTrue(cell.waitForExistence(timeout: 5))
    }
    
    func testFeed() throws {
        let tablesQuery = app.tables
        sleep(2)
        tablesQuery.element.swipeUp()
        
        let cellLike = tablesQuery.cells.firstMatch
        let likeButton = cellLike.buttons["likeButton"]
        likeButton.tap()
        sleep(2)
        likeButton.tap()
        sleep(2)
        cellLike.tap()
        sleep(2)
            
        let image = app.scrollViews.images.element(boundBy: 0)
        
        image.pinch(withScale: 3, velocity: 1)
        
        image.pinch(withScale: 0.5, velocity: -1)
        
        let navBackButtonWhiteButton = app.buttons["backButton"]
        navBackButtonWhiteButton.tap()
    }
    
    func testProfile() throws {
        sleep(3)
        app.tabBars.buttons.element(boundBy: 1).tap()
       
        XCTAssertTrue(app.staticTexts[" "].exists)
        XCTAssertTrue(app.staticTexts[" "].exists)
        
        app.buttons["exitButton"].tap()
        
        // add your first and last name in alert text
        let alert = app.alerts["Exit from account \(name)"]
        let yesButton = alert.buttons["Yes"]
        
        sleep(3)
        
        XCTAssertTrue(alert.exists)
        XCTAssertTrue(yesButton.exists)
        
    }
}
